modified format of embedded time

--- a/PA1_template.html
+++ b/PA1_template.html
@@ -297,7 +297,7 @@ max_time
 ## 104        104
 </code></pre>
 
-<p>The 104th 5-minute interval in the day contains the highest average number of steps across the two months (206.1698113).</p>
+<p>The 104th 5-minute interval in the day (8:40) contains the highest average number of steps across the two months (206.1698113)..</p>
 
 <h5>Now for even more speculation:</h5>
 
